--- a/TFT.ipynb
+++ b/TFT.ipynb
@@ -94,7 +94,7 @@
       "outputs": [],
       "source": [
         "# Load the data\n",
-        "Y_df = pd.read_csv('x.csv', sep=';')\n",
+        "Y_df = pd.read_csv('data.csv', sep=';')\n",
         "\n",
         "# Set the threshold until the max\n",
         "max = np.where(Y_df.y==np.max(Y_df.y))\n",
